[package]
name = "os"
version = "0.1.0"
authors = ["shinbokuow"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
spin = "0.5.2"
buddy_system_allocator = "0.3"
xmas-elf = "0.6"
rcore-fs = { git = "https://github.com/rcore-os/rcore-fs", rev = "7f5eeac" }
rcore-fs-sfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "7f5eeac" }

[build-dependencies]
chrono = "0.4"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
